# LOL_Counter

./: .gitignore  add.py  add_combo_counters.py  champ.jsonl  chat.py  crawler.py  create.py  print.py  pyproject.toml  sort_temp.py  top.json  top.jsonl  view.py  view_rapid.py  기획서.md
.streamlit/: config.toml
쓰레기통/: view.py
